# Graphics-archived

./: CMakeLists.txt
cmake/: Config.cmake.in  cmc-cpp.cmake  cmc-find.cmake  cmc-install.cmake  cmc-macros.cmake
cmake/doc/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/Tests/: Barycentric.cpp  CMakeLists.txt  Matrix.cpp  Polynomial.cpp
src/libs/: CMakeLists.txt
src/libs/Math/: CMakeLists.txt  MatrixBase.h  Vector.h
